# iscreami

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 64eaea837bc3_initial_schema.py
backend/api/: app.py  db.py  models.py  schemas.py  settings.py
backend/api/routes/: calculate.py  ingredients.py  profiles.py  recipes.py
backend/api/services/: calculator.py  composition.py  export.py  freezing.py  pac.py  sweetness.py
backend/cli/: main.py  seed-ingredients.json  seed.py
backend/cli/importers/: __init__.py  base.py  nzfcdb.py  usda.py
backend/tests/: conftest.py  test_calculator.py  test_composition.py  test_export.py  test_freezing.py  test_importers.py  test_pac.py  test_sweetness.py
docs/: freezing-calculations.md
docs/development/: backend.md  frontend.md  testing.md  tooltip-system.md
docs/ref/: URLS.md  freezing-point-depression.md  reddit-guide.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CalculatorView.tsx  CompositionTable.tsx  FileUploadModal.tsx  FreezingSection.tsx  HomePage.tsx  InfoIcon.tsx  IngredientFormModal.tsx  IngredientPanel.tsx  IngredientSearch.tsx  IngredientsView.tsx  MetricCards.tsx  NutritionTable.tsx  ProfileFormModal.tsx  ProfilesView.tsx  RecentRecipes.tsx  RecipeCard.tsx  RecipeHeader.tsx  RecipePickerModal.tsx  RecipesView.tsx  ThemeToggle.tsx  Tooltip.tsx
frontend/src/hooks/: ToastProvider.tsx  useDebouncedValue.ts  useRecipeCalculator.ts  useTheme.ts  useToast.ts
frontend/src/lib/: formatting.ts  tooltips.ts  validation.ts
