[project]
name = "iscreami"
version = "0.1.0"
description = "Open-source ice cream recipe calculator"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Hadley Rich" }
]
keywords = ["ice-cream", "recipes", "calculator", "self-hosted", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.34",
    "typer>=0.15",
    "ijson>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.15.9",
]

[project.urls]
Homepage = "https://github.com/hadleyrich/iscreami"
Repository = "https://github.com/hadleyrich/iscreami"
Issues = "https://github.com/hadleyrich/iscreami/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "S",    # security
]
ignore = [
    "E501",   # handled by formatter
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "B008",   # typer.Option defaults are fine
    "B905",   # zip(strict=...) not needed here
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["api", "cli"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

markers = [
    "unit: fast tests with mocked dependencies",
    "integration: tests with real DB/services",
    "e2e: full workflow tests",
]

addopts = "-v"

[tool.coverage.run]
branch = true
source = ["api"]
omit = [
    "api/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
